syntax = "proto3";

package customer;

service CustomerService {
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
}

message CreateCustomerRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string role = 5; 
  string firstName = 6; 
  string lastName = 7;
  string address = 8;
  date Dob = 9;
  string phoneNo = 10;
}

message CreateCustomerResponse {
  string customerId = 1;
}

// Define other request and response messages similarly

